foundation-objs/main/default/objects/Billing_Details__c/Billing_Details__c.object-meta.xml
<CustomObject>
    <label>Billing &amp; Risk</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing &amp; Risk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>