foundation-objs/main/default/objects/Billing_Details__c/fields/Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner__c</fullName>
    <formula>IF(
Asset__r.Opportunity__r.Owner.IsActive = TRUE, 
Asset__r.Opportunity__r.Owner.FirstName +&quot; &quot;+ Asset__r.Opportunity__r.Owner.LastName ,  
IF(Asset__r.Account.Sales_Owner__r.IsActive = TRUE,Asset__r.Account.Sales_Owner__r.FirstName +&quot; &quot;+Asset__r.Account.Sales_Owner__r.LastName, Asset__r.Account.Owner_Full_Name__c)
)</formula>
    <label>Action Owner</label>
    <type>Text</type>
</CustomField>