foundation-objs/main/default/objects/Billing_Details__c/fields/Action_Owner_For_Due_Unbilled__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner_For_Due_Unbilled__c</fullName>
    <label>Action Owner For Due &amp; Unbilled</label>
    <length>100</length>
    <type>Text</type>
</CustomField>