foundation-objs/main/default/objects/Billing_Details__c/fields/Action_Owner_for_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner_for_Outstanding__c</fullName>
    <label>Action Owner for Outstanding</label>
    <length>100</length>
    <type>Text</type>
</CustomField>