foundation-objs/main/default/objects/Billing_Details__c/fields/Action_Owner_From_October_Onwards__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner_From_October_Onwards__c</fullName>
    <label>Action Owner From October Onwards</label>
    <length>255</length>
    <type>Text</type>
</CustomField>