foundation-objs/main/default/objects/Billing_Details__c/fields/Action_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner_Team__c</fullName>
    <label>Action Owner Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>