foundation-objs/main/default/objects/Billing_Details__c/fields/Action_Plan_basis_Cadence_call__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_basis_Cadence_call__c</fullName>
    <label>Action Plan basis Cadence call</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>