foundation-objs/main/default/objects/Billing_Details__c/fields/Ageing_For_Eligible_But_Non_Billed__c.field-meta.xml
<CustomField>
    <fullName>Ageing_For_Eligible_But_Non_Billed__c</fullName>
    <label>Ageing For Eligible But Non-Billed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>