foundation-objs/main/default/objects/Billing_Details__c/fields/Ageing_For_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Ageing_For_Outstanding__c</fullName>
    <label>Ageing For Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>