foundation-objs/main/default/objects/Billing_Details__c/fields/Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Billed__c</fullName>
    <label>Amount Billed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>