foundation-objs/main/default/objects/Billing_Details__c/fields/Amount_Due_Un_Billed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_Un_Billed__c</fullName>
    <label>Amount Due &amp; Un-Billed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>