foundation-objs/main/default/objects/Billing_Details__c/fields/AR_Owner__c.field-meta.xml
<CustomField>
    <fullName>AR_Owner__c</fullName>
    <label>AR Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>