foundation-objs/main/default/objects/Billing_Details__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Billing_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>