foundation-objs/main/default/objects/Billing_Details__c/fields/Billed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Billed_Lost__c</fullName>
    <label>Billed Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>