foundation-objs/main/default/objects/Billing_Details__c/fields/Billing_For_Excess_Usage__c.field-meta.xml
<CustomField>
    <fullName>Billing_For_Excess_Usage__c</fullName>
    <label>Billing For Excess Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>