foundation-objs/main/default/objects/Billing_Details__c/fields/Billing_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Billing_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Billing ID (18)</label>
    <type>Text</type>
</CustomField>