foundation-objs/main/default/objects/Billing_Details__c/fields/Collection_Manager__c.field-meta.xml
<CustomField>
    <fullName>Collection_Manager__c</fullName>
    <label>Collection Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>