foundation-objs/main/default/objects/Billing_Details__c/fields/Collection_Owner__c.field-meta.xml
<CustomField>
    <fullName>Collection_Owner__c</fullName>
    <label>Collection Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>