foundation-objs/main/default/objects/Billing_Details__c/fields/Comments_From_AR_Manager__c.field-meta.xml
<CustomField>
    <fullName>Comments_From_AR_Manager__c</fullName>
    <label>Comments From AR Manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>