foundation-objs/main/default/objects/Billing_Details__c/fields/Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Notes__c</fullName>
    <label>Credit Notes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>