foundation-objs/main/default/objects/Billing_Details__c/fields/Detailed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Reason__c</fullName>
    <label>Comments - AR Manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>