foundation-objs/main/default/objects/Billing_Details__c/fields/Excess_usage_billing__c.field-meta.xml
<CustomField>
    <fullName>Excess_usage_billing__c</fullName>
    <label>Excess usage billing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>