foundation-objs/main/default/objects/Billing_Details__c/fields/Expected_Date_Of_Closure__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_Closure__c</fullName>
    <label>Expected Date Of Closure</label>
    <type>Date</type>
</CustomField>