foundation-objs/main/default/objects/Billing_Details__c/fields/Expected_date_of_Issue_Closure__c.field-meta.xml
<CustomField>
    <fullName>Expected_date_of_Issue_Closure__c</fullName>
    <label>Expected date of Issue Closure</label>
    <type>Date</type>
</CustomField>