foundation-objs/main/default/objects/Billing_Details__c/fields/Expected_Green_Date_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Expected_Green_Date_Account_Owner__c</fullName>
    <label>Expected Green Date - Account Owner</label>
    <type>Date</type>
</CustomField>