foundation-objs/main/default/objects/Billing_Details__c/fields/Expected_Green_Date_CSM__c.field-meta.xml
<CustomField>
    <fullName>Expected_Green_Date_CSM__c</fullName>
    <label>Expected Green Date - CSM</label>
    <type>Date</type>
</CustomField>