foundation-objs/main/default/objects/Billing_Details__c/fields/Expected_Green_Date_Product__c.field-meta.xml
<CustomField>
    <fullName>Expected_Green_Date_Product__c</fullName>
    <label>Expected Green Date - Product</label>
    <type>Date</type>
</CustomField>