foundation-objs/main/default/objects/Billing_Details__c/fields/Expected_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Payment_Date__c</fullName>
    <label>Expected Payment Date-Finance</label>
    <type>Date</type>
</CustomField>