foundation-objs/main/default/objects/Billing_Details__c/fields/Final_Expected_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Expected_Closure_Date__c</fullName>
    <label>Final Expected Closure Date</label>
    <type>Date</type>
</CustomField>