foundation-objs/main/default/objects/Billing_Details__c/fields/Integration_Issue_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Issue_Closure_Date__c</fullName>
    <label>Integration Issue Closure Date</label>
    <type>Date</type>
</CustomField>