foundation-objs/main/default/objects/Billing_Details__c/fields/Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date__c</fullName>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>