foundation-objs/main/default/objects/Billing_Details__c/fields/Last_Invoice_Raised_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Raised_Date__c</fullName>
    <label>Last Invoice Raised Date</label>
    <type>Date</type>
</CustomField>