foundation-objs/main/default/objects/Billing_Details__c/fields/Last_Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Received_Date__c</fullName>
    <label>Last Payment Received Date</label>
    <type>Date</type>
</CustomField>