foundation-objs/main/default/objects/Billing_Details__c/fields/License_Suspension_required__c.field-meta.xml
<CustomField>
    <fullName>License_Suspension_required__c</fullName>
    <label>License Suspension required?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>