foundation-objs/main/default/objects/Billing_Details__c/fields/New_Action_Owner_Comments__c.field-meta.xml
<CustomField>
    <fullName>New_Action_Owner_Comments__c</fullName>
    <label>New Action Owner Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>