foundation-objs/main/default/objects/Billing_Details__c/fields/Outstanding_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Overdue__c</fullName>
    <label>Outstanding Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>