foundation-objs/main/default/objects/Billing_Details__c/fields/Outstanding_within_due_date__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_within_due_date__c</fullName>
    <label>Outstanding within due date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>