foundation-objs/main/default/objects/Billing_Details__c/fields/Payment_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Received__c</fullName>
    <label>Payment(Amount) Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>