foundation-objs/main/default/objects/Billing_Details__c/fields/Promise_to_pay_date__c.field-meta.xml
<CustomField>
    <fullName>Promise_to_pay_date__c</fullName>
    <label>Promise to pay date- Action owner</label>
    <type>Date</type>
</CustomField>