foundation-objs/main/default/objects/Billing_Details__c/fields/Pushed_to_Future_Billing__c.field-meta.xml
<CustomField>
    <fullName>Pushed_to_Future_Billing__c</fullName>
    <label>Pushed to Future Billing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>