foundation-objs/main/default/objects/Billing_Details__c/fields/Reason_For_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Outstanding__c</fullName>
    <label>Reason For Outstanding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>