foundation-objs/main/default/objects/Billing_Details__c/fields/Reason_For_Un_Billed__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Un_Billed__c</fullName>
    <label>Reason For Un-Billed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>