foundation-objs/main/default/objects/Billing_Details__c/fields/Reasons_Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Reasons_Action_Owner__c</fullName>
    <label>Reasons - Action Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Integration Issue</fullName>
            </value>
            <value>
                <fullName>Service Issue</fullName>
            </value>
            <value>
                <fullName>CT Finance Issues</fullName>
            </value>
            <value>
                <fullName>Potential Churn</fullName>
            </value>
            <value>
                <fullName>Push to Future Billing</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>P2P Confirmed</fullName>
                <label>Promise to Pay  Confirmed (No Issues)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>