foundation-objs/main/default/objects/Billing_Details__c/fields/Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation__c</fullName>
    <label>Reconciliation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>