foundation-objs/main/default/objects/Billing_Details__c/fields/Responsibility_Category__c.field-meta.xml
<CustomField>
    <fullName>Responsibility_Category__c</fullName>
    <label>Responsibility Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>