foundation-objs/main/default/objects/Billing_Details__c/fields/Risk_as_on_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_as_on_Date__c</fullName>
    <label>Risk as on Date</label>
    <type>Date</type>
</CustomField>