foundation-objs/main/default/objects/Billing_Details__c/fields/Risk_Comments_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Risk_Comments_Account_Owner__c</fullName>
    <label>Risk Comments - Account Owner</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>