foundation-objs/main/default/objects/Billing_Details__c/fields/Risk_Comments_Product__c.field-meta.xml
<CustomField>
    <fullName>Risk_Comments_Product__c</fullName>
    <label>Risk Comments - Product</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>