foundation-objs/main/default/objects/Billing_Details__c/fields/Risk_Status_by_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status_by_Account_Owner__c</fullName>
    <label>Risk Status by Account Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>