foundation-objs/main/default/objects/Billing_Details__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <label>Risk Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>