foundation-objs/main/default/objects/Billing_Details__c/fields/Support_Owner__c.field-meta.xml
<CustomField>
    <fullName>Support_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Billing_Risk</relationshipName>
    <type>Lookup</type>
</CustomField>