foundation-objs/main/default/objects/Billing_Details__c/fields/Support_Owner_Comments__c.field-meta.xml
<CustomField>
    <fullName>Support_Owner_Comments__c</fullName>
    <label>Support Owner Comments</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>