foundation-objs/main/default/objects/Billing_Details__c/fields/Support_required__c.field-meta.xml
<CustomField>
    <fullName>Support_required__c</fullName>
    <label>Support required</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>