foundation-objs/main/default/objects/Billing_Details__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>