foundation-objs/main/default/objects/Billing_Details__c/fields/Unbilled_Lost__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Lost__c</fullName>
    <label>Unbilled Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>