foundation-objs/main/default/objects/Billing_Details__c/validationRules/Mandatory_Risk_Status_Csm_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Risk_Status_Csm_Details</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp;
ISCHANGED(Risk_Status_by_CSM__c) &amp;&amp;
NOT(ISPICKVAL(  Risk_Status_by_CSM__c  ,&apos;&apos;)) &amp;&amp;
(ISBLANK(  Risk_Comments_CSM__c  ) ||
ISNULL(  Expected_Green_Date_CSM__c  ))</errorConditionFormula>
    <errorMessage>Please Enter Risk Comments - CSM and Expected Green Date - CSM.</errorMessage>
</ValidationRule>