foundation-objs/main/default/objects/Billing_Details__c/validationRules/Mandatory_Risk_Status_Product_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Risk_Status_Product_Details</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp;
ISCHANGED(Risk_Status_by_Product__c) &amp;&amp;
NOT(ISPICKVAL(   Risk_Status_by_Product__c   ,&apos;&apos;)) &amp;&amp;
(ISBLANK(   Risk_Comments_Product__c   ) ||
ISNULL(   Expected_Green_Date_Product__c   ))</errorConditionFormula>
    <errorMessage>Please Enter Risk Comments - Product and Expected Green Date - Product.</errorMessage>
</ValidationRule>